WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
129516
[iOS][WebKit2] Don't use any of the mach exception handling code on iOS
https://bugs.webkit.org/show_bug.cgi?id=129516
Summary
[iOS][WebKit2] Don't use any of the mach exception handling code on iOS
Pratik Solanki
Reported
2014-02-28 16:35:57 PST
[iOS][WebKit2] Don't use any of the mach exception handling code on iOS
Attachments
Patch
(5.89 KB, patch)
2014-02-28 16:38 PST
,
Pratik Solanki
no flags
Details
Formatted Diff
Diff
Patch
(6.33 KB, patch)
2014-02-28 16:44 PST
,
Pratik Solanki
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Pratik Solanki
Comment 1
2014-02-28 16:38:41 PST
Created
attachment 225504
[details]
Patch
Pratik Solanki
Comment 2
2014-02-28 16:41:32 PST
I could have used #if PLATFORM(MAC) but didn't think having a PLATFORM(MAC) inside a file named Mac.cpp made sense. So I used !PLATFORM(IOS).
Pratik Solanki
Comment 3
2014-02-28 16:44:54 PST
Created
attachment 225508
[details]
Patch
WebKit Commit Bot
Comment 4
2014-02-28 20:04:52 PST
Comment on
attachment 225508
[details]
Patch Clearing flags on attachment: 225508 Committed
r164905
: <
http://trac.webkit.org/changeset/164905
>
WebKit Commit Bot
Comment 5
2014-02-28 20:04:57 PST
All reviewed patches have been landed. Closing bug.
Csaba Osztrogonác
Comment 6
2014-03-01 00:32:22 PST
Comment on
attachment 225508
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=225508&action=review
> Source/WebKit2/Shared/ChildProcessProxy.cpp:131 > -#if PLATFORM(MAC) > +#if !PLATFORM(IOS)
It broke the EFL and GTK build. PLATFORM(MAC) was the proper guard here, because only Apple Mac port has/use this function. But !PLATFORM(IOS) includes all ports (Apple Mac, GTK, EFL) except IOS.
Csaba Osztrogonác
Comment 7
2014-03-01 00:34:53 PST
Buildfix landed in
http://trac.webkit.org/changeset/164912
Otherwise I think using !PLATFORM(IOS) instead of PLATFORM(MAC) anywhere is so serious and misleading if you don't want to intentionally refer all ports except IOS.
Csaba Osztrogonác
Comment 8
2014-03-01 00:40:00 PST
(In reply to
comment #2
)
> I could have used #if PLATFORM(MAC) but didn't think having a PLATFORM(MAC) inside a file named Mac.cpp made sense. So I used !PLATFORM(IOS).
PLATFORM(MAC) == Apple Mac port PLATFORM(IOS) == Apple IOS port !PLATFORM(IOS) == all ports except Apple IOS port, which is Apple Mac port if you use it in a *Mac.cpp. But it isn't true in platform independent files.
Pratik Solanki
Comment 9
2014-03-01 09:00:52 PST
Oops. Do you want to just roll the patch out? I am not near a computer right now.
Pratik Solanki
Comment 10
2014-03-01 09:07:02 PST
Oh I see you landed a build fix. Thank you!
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug