[iOS][WebKit2] Don't use any of the mach exception handling code on iOS https://bugs.webkit.org/show_bug.cgi?id=129516

Reviewed by Sam Weinig.

This code is not used on iOS after my fix in r164883. We can just move it all under
!PLATFORM(IOS).

* Platform/IPC/Connection.h:
* Platform/IPC/mac/ConnectionMac.cpp:
(IPC::Connection::platformInvalidate):
(IPC::Connection::platformInitialize):
(IPC::Connection::open):
* Shared/ChildProcessProxy.cpp:
(WebKit::ChildProcessProxy::didFinishLaunching):


Canonical link: https://commits.webkit.org/147585@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@164905 268f45cc-cd09-0410-ab3c-d52691b4dbfc